# br-stocks-ts-pipeline

./: .gitignore  CHANGELOG.md  README.md  TODO.md  index.html  landing_data.json  package-lock.json  pyproject.toml
.claude/skills/data-storytelling/: SKILL.md
assets/: index-B142mbyc.css  index-B7wEdfmq.js  index-BeD0Ptr-.css  index-rLnUxzoa.js
data/: dashboard_data.json
landing/: index.html  package-lock.json  package.json  vite.config.js
landing/src/: App.jsx
landing/src/components/: AboutCard.jsx  CTASection.jsx  ForecastSection.jsx  HeroSection.jsx  MarketHealthSection.jsx  Navbar.jsx  RankingSection.jsx  ScrollReveal.jsx
landing/src/components/charts/: CorrelationMatrix.jsx  DrawdownChart.jsx  ForecastChart.jsx  RankingBar.jsx
landing/src/data/: loadData.js
landing/src/hooks/: useCountUp.js
landing/src/styles/: globals.css
rabbitize/: gerar_audio_apresentacao.py  guia-rabbitize.md
scripts/: extract_landing_data.py  generate_dashboard_data.py
src/: anomaly_monitor.py  config.py  dashboard.py  decompose.py  eda.py  ingest.py  modeling.py  outliers.py  pipeline.py  preprocess.py  validation.py
src/models/: __init__.py  arima_model.py  base.py  cross_validate.py  lstm_model.py  prophet_model.py
tests/: test_dashboard_e2e.py  test_modeling.py  test_outliers.py  test_preprocess.py
